# bitportal-client

./: .babelrc  .babelrc.old  .env.development  .env.production  .env.staging  .eslintignore  .eslintrc  .gitignore  .gitmodules  .projectile  README.md  app.json  circle.yml  index.js  main.js  package-lock.json  package.json  package.json.old  postcss.config.js  rn-cli.config.js  tsconfig.json  tslint.json  webpack.config.js
android/app/: BUCK  CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/raw/: inject.js  injectMetaMask.js  injectScatter.js
android/app/src/main/java/com/bitportal/: MainActivity.java  MainApplication.java
android/app/src/main/java/com/bitportal/core/: BPCoreModule.java  BPCorePackage.java
android/app/src/main/java/com/bitportal/locales/: LocalesInterface.java  LocalesPackage.java
android/app/src/main/java/com/bitportal/umeng/: AnalyticsModule.java  DplusReactPackage.java  RNUMConfigure.java
android/app/src/main/java/com/bitportal/wallet/: MainActivity.java  MainActivity.kt  MainApplication.java  MainApplication.kt  ReacNativeFragmentActivity.kt
android/app/src/main/java/com/dexlize/bitportal/: MainActivity.java  MainApplication.java
android/app/src/main/java/com/reactnativenavigation/anim/: BaseAnimator.java  FabAnimator.java  ModalAnimator.java  NavigationAnimator.java  TopBarCollapseBehavior.java
android/app/src/main/java/com/reactnativenavigation/parse/: AnimationOptions.java  AnimationsOptions.java  BackButton.java  BottomTabOptions.java  BottomTabsOptions.java  ExternalComponent.java  FabOptions.java  LayoutOptions.java  ModalOptions.java  (+4 more)
android/app/src/main/res/anim/: slide_down.xml  slide_fade_in.xml
android/app/src/main/res/drawable/: ic_arrow_back_black_rtl_24dp.xml
android/app/src/main/res/layout/: activity_main.xml  activity_react_native_fragment.xml  fragment_main.xml  launch_screen.xml  ticker_list_item.xml
android/app/src/main/res/values/: ids.xml  strings.xml  styles.xml
(+2346 files in other folders)
